--- a/app/views/say/goodbye.html.erb
+++ b/app/views/say/goodbye.html.erb
@@ -1,2 +1,8 @@
-<h1>Say#goodbye</h1>
-<p>Find me in app/views/say/goodbye.html.erb</p>
+<h1>Goodbye</h1>
+<p>
+	It was a nice to have you here
+</p>
+
+<p>
+	Say <%= link_to "Hello", say_hello_path %>
+</p>
