--- a/app/views/say/hello.html.erb
+++ b/app/views/say/hello.html.erb
@@ -6,3 +6,8 @@
 	Time to say
 	<%= link_to "Goodbye", say_goodbye_path %>
 </p>
+<p>
+	<%= 1+2 %><br />
+	<%= 'cow'+'boy' %><br />
+	Time in one hour: <%= 1.hour.from_now %><br />
+</p>
